# lexicoid

./: .gitignore  Cargo.toml  README.md
examples/: endless.rs
src/: lib.rs
